--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,5 +22,5 @@ jobs:
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
-           github_token: ${{ secrets.GITHUB_TOKEN }}
+           github_token: 44c7fac6ca9cb479fc733cd07aa6e4e4cbc43209
            publish_dir: ./Server/bin/Release/netcoreapp3.1/publish/wwwroot/
